# bondage-club-bot-core

./: README.md  bot.py  chatroom_config.json  main.py  pyproject.toml  requirements.txt
bondage_club_bot_core/: __init__.py  bot.py
bondage_club_bot_core/utils/: __init__.py  logger.py  member_actions.py  socket_event_queue.py
examples/basic_bot/: .env.example  Dockerfile  docker-compose.yml  main.py
