[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bondage-club-bot-core"
version = "0.1.0"
description = "Core Bondage Club bot library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-socketio[asyncio_client]>=5.11.0",
    "lzstring>=1.0.4",
]

[tool.setuptools.packages.find]
include = ["bondage_club_bot_core*"]
